Representation widget: prevent bleed into buttons
Representation fields and save/cancel buttons were overlapping on small
screens/after a certain representation count.

Bug: T195298

--- a/resources/form-representation-widget.less
+++ b/resources/form-representation-widget.less
@@ -1,5 +1,6 @@
 .representation-widget {
 	display: flex;
+	margin-right: 18em; /* compensate absolutely positioned toolbar (.wikibase-entityview .wikibase-toolbar-container) */
 
 	&_representation-list {
 		margin: 0 !important;
